--- a/MDK-ARM/Node1_1/Node1_1.build_log.htm
+++ b/MDK-ARM/Node1_1/Node1_1.build_log.htm
@@ -17,47 +17,24 @@ Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.28.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      UL2CM3.DLL V1.162.16.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.6.0
 Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 D:\KeilC_v5\Documents_STM\IoT_Home\Node_Tranship\MDK-ARM\Node_Tranship.uvprojx
-Project File Date:  03/08/2024
+Project File Date:  03/22/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Node1_1'
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_it.c...
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_hal_rcc_ex.c...
 compiling main.c...
-../Core/Src/main.c(63): warning:  #177-D: variable "count"  was declared but never referenced
-  	uint8_t count = 0;
+../Core/Src/main.c(31): warning:  #550-D: variable "TimeOut1"  was set but never used
+  static uint32_t TimeOut1, TimeOut2;
 ../Core/Src/main.c: 1 warning, 0 errors
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_spi.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_tim.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling system_stm32f1xx.c...
-compiling MY_NRF24.c...
-..\Libary_User\Src\MY_NRF24.c(15): warning:  #550-D: variable "dynamic_payloads_enabled"  was set but never used
-  static bool dynamic_payloads_enabled; 	/**< Whether dynamic payloads are enabled. */ 
-..\Libary_User\Src\MY_NRF24.c(17): warning:  #550-D: variable "wide_band"  was set but never used
-  static bool wide_band; 						/* 2Mbs data rate in use? */
-..\Libary_User\Src\MY_NRF24.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=6828 RO-data=316 RW-data=64 ZI-data=1840  
+Program Size: Code=8036 RO-data=316 RW-data=72 ZI-data=1824  
 FromELF: creating hex file...
-"Node1_1\Node1_1.axf" - 0 Error(s), 3 Warning(s).
+"Node1_1\Node1_1.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -81,7 +58,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
